# guetzli-js

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  binding.gyp  build-win32.bat  build-win64.bat  build.md  changes.md  gulpfile.js  helper.md  index.js  package.json  test.js  tsconfig.json  utils.js
docs/: README.md
docs/example/: bundle.min.js
docs/example-emscripten/: guetzli.out.js  index.html  index.js
example/: index.html  index.ts  tsconfig.json
example/hello-01/: index.html
lib/: bench.ts  browser.ts  greet.ts  guetzli-cli.ts  guetzli.ts  helper.ts  image.ts  main.ts  test.ts  utils.ts
lib/cxx/: guetzli_api.cc  guetzli_api.h  guetzli_node.cc
lib/cxx-emscripten/: .gitignore  CMakeLists.txt  Makefile  build-debug-proj-mt.bat  guetzli.out.d.ts  guetzli.out.js  main.cc  main.d.ts  main.js  post.js  pre.js  version.md
src/: CMakeLists.txt  Makefile  README.md  binding.gyp  build-debug-proj-mt.bat  build-win32.bat  build-win64.bat  guetzli_capi.cc  guetzli_capi.h  guetzli_node.cc  hello.cc  index.js
src/base/: foo.d.ts  foo.js
src/example/: index.html  index.ts  tsconfig.json
src/js/: greet.d.ts  greet.js  main.d.ts  main.js
src/ts/: greet.ts  main.ts
tools/: copy_file.js  postinstall.js  preinstall.js
